[package]
name = "domain_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare = "0.9"
trust-dns-resolver  = { version = "*", features = ["dns-over-rustls"] }
serde = "1.0"
serde_yaml = "0.9"